@@ -245,7 +245,7 @@ emit (be_interface *derived,
 
   if (base->is_nested ())
     {
-      be_decl *scope;
+      be_decl *scope = 0;
       scope = be_scope::narrow_from_scope (base->defined_in ())->decl ();
 
       *os << "POA_" << scope->name () << "::AMH_"
